# protect

./: .gitignore  AF_XDP  CMakeLists.txt  DESIGN  Makefile  PLAN  README.md  TODO  go.mod  run  setup.sh
.semaphore/: semaphore.yml
cmd/client/: client.cpp
cmd/client_backend/: Makefile  client_backend.c  client_backend.h  client_backend_base64.c  client_backend_base64.h  client_backend_bpf.c  client_backend_bpf.h  client_backend_config.c  client_backend_config.h  client_backend_constants.h  client_backend_endian.h  client_backend_hash.h  client_backend_main.c  client_backend_main.h  client_backend_manager.c  client_backend_platform.c  client_backend_platform.h  client_backend_shared.h  client_backend_xdp.c
cmd/keygen/: keygen.cpp
cmd/receiver/: receiver.cpp
cmd/relay/: relay_bpf.c  relay_bpf.h  relay_main.c
cmd/run/: run.go
cmd/sender/: sender.cpp
cmd/server/: server.cpp
cmd/server_xdp/: Makefile  proton.h  server_xdp.c  server_xdp_bpf.c  server_xdp_bpf.h  server_xdp_config.h  server_xdp_constants.h  server_xdp_main.c  server_xdp_shared.h  server_xdp_xdp.c
cmd/test/: test.cpp
lib/module/: Makefile  hydrogen.c  hydrogen.h  next_module.c  next_module.h
lib/platform/: platform.c  platform.h
lib/shared/: shared_base64.c  shared_base64.h  shared_encoding.h
module/: Makefile
relay/: Makefile  relay.c  relay.h  relay_base64.c  relay_bpf.c  relay_bpf.h  relay_config.c  relay_debug.c  relay_debug.h  relay_encoding.h  relay_endian.h  relay_main.c  relay_main.h  relay_manager.h  relay_messages.h  relay_ping.c  relay_ping.h  relay_ping_history.c  relay_ping_history.h  relay_ping_stats.h  relay_platform.c  relay_queue.h  relay_set.h
sdk/: .gitignore  client.cpp  next.cpp  next.h  next_address.cpp  next_address.h  next_base64.cpp  next_base64.h  next_client.cpp  next_client.h  next_client_backend_token.cpp  next_client_backend_token.h  next_client_socket.cpp  next_config.cpp  next_config.h  next_connect_token.cpp  next_connect_token.h  next_constants.h  next_continue_token.h  next_hash.cpp  next_hash.h  next_header.h  next_hydrogen.h  next_internal_config.h  next_jitter_tracker.h  next_memory_checks.h  next_out_of_order_tracker.h  next_packet_filter.cpp  next_packet_filter.h  next_packet_loss_tracker.h  next_packets.cpp  next_packets.h  next_platform.h  next_platform_gdk.cpp  next_platform_gdk.h  next_platform_linux.cpp  next_platform_linux.h  next_platform_mac.cpp  next_platform_mac.h  next_platform_ps4.cpp  (+27 more)
sdk/hydrogen/: hydrogen.c
sdk/include/: next.h  next_client.h  next_connect_token.h  next_continue_token.h  next_header.h  next_internal_config.h  next_packet_loss_tracker.h  next_replay_protection.h  next_route_manager.h  next_route_token.h  next_server.h  next_value_tracker.h
sdk/source/: next.cpp  next_base64.cpp  next_client.cpp  next_connect_token.cpp  next_route_manager.cpp  next_server.cpp  next_tests.cpp
